--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ https://cdn.jsdelivr.net/npm/bootstrap3@3.3.5/dist/css/bootstrap.min.css
         </button>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav visible-xs">
+        <ul class="nav navbar-nav visible-xs text-center">
           <li><a href="#chicken">Chicken</a></li>
           <li><a href="#beef">Beef</a></li>
           <li><a href="#sushi">Sushi</a></li>
